# 24hfunk

./: .env.example  .gitignore  README.md  STREAMING.md  package-lock.json  package.json  pyproject.toml
bridge/: osc_in.js  server.js  state.js
director/: director.py  llm_client.py  prompts.py  publish.py  schema.py  scribe.py  tts.py
docs/: visual-effects.md
midi/: canned.py  midillm.py  osc_out.py  recorder.py  source.py  worker.py
scripts/: start-all.sh  start-stream.sh  stop-all.sh  supervise.sh
scripts/smoke/: fake-section.py  fire_osc.py  genre_audition.py  sc-compile.scd  sc-drone-test.scd  sc-selftest.scd  send-test-note.js
synth/: boot.scd  router.scd
synth/synthdefs/: bass.scd  bassfm.scd  bassneuro.scd  bassreese.scd  basssquare.scd  basssub.scd  clap.scd  ducktrig.scd  fx.scd  fxdrum.scd  hat.scd  keys.scd  keysclav.scd  keyselectro.scd  keysethereal.scd  keysfunk.scd  keysjazz.scd  keysoberheim.scd  keysorgan.scd  keyspad.scd  kick.scd  kick808.scd  kickhard.scd  lead.scd  leadbell.scd  leadbrass.scd  leadchant.scd  leaddub.scd  leadfm.scd  leadglitch.scd  leadhyper.scd  leadjazz.scd  leadmallet.scd  leadmarimba.scd  leadmoog.scd  leadpluck.scd  leadpulse.scd  leadrhodes.scd  leadscratch.scd  leadsiren.scd  (+14 more)
visualizer/: a3d.js  demoscene.js  index.html  main.js  palette.js  render.js  style.css  worlds.js
